# spacestate_irc_bot

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  publish.sh  readme.md
.github/workflows/: rust.yml
src/: main.rs
