[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"
name = "spacestate_irc_bot"
version = "0.2.0"

[dependencies]
lazy_static = "1.4"
futures = "0.3"
serde_derive = "1.0"
serde = "1.0"

[dependencies.irc]
version = "0.14"
default-features = false
features = ["ctcp", "tls-rust"]

[dependencies.tokio]
version = "0.2"
default-features = false
features = ["rt-core", "tcp", "time"]

[dependencies.reqwest]
version = "0.10.6"
default-features = false
features = ["rustls-tls", "json"]


[profile.release]
lto = true
